<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".ftp.ExplorerActivity">


    <Button
        android:id="@+id/btn_GoBackMainActivity2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="129dp"
        android:text="@string/btn_GoBackMainActivity" />

    <TextView
        android:id="@+id/txt_PathFile"
        android:layout_width="221dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:text="@string/txt_PathFile"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_PathFile"
        android:text="@string/btn_Search" />

    <Button
        android:id="@+id/btn_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="188dp"
        android:text="@string/btn_Done" />
</RelativeLayout>